<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Fumoku</string>

    <string name="aboutLibraries_description_showIcon" translatable="false">true</string>
    <string name="aboutLibraries_description_showVersionName" translatable="false">true</string>
    <string name="aboutLibraries_description_name" translatable="false">@string/app_name</string>
    <string name="aboutLibraries_description_text">Wiki about Fumo merch from Touhou series</string>

    <string name="about">About</string>
    <string name="search_fumo">Search fumo</string>

    <string name="type">Type</string>
    <string name="release_years">Release years</string>
    <string name="rarity">Rarity</string>
    <string name="secondhand_cost">Secondhand cost</string>
    <string name="price_range">Price range</string>
    <string name="wiki" translatable="false">Wiki</string>
</resources>