<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/arrow_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Image -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- ID, character, name -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceLabelSmall" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/character"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceTitleLarge" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="?attr/textAppearanceDisplayMedium" />

                <!-- Type -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/type"
                        android:textAppearance="?attr/textAppearanceLabelSmall" />

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/type"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.chip.ChipGroup>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- Release years -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/release_years_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/release_years"
                        android:textAppearance="?attr/textAppearanceLabelSmall" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/release_years"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </com.google.android.material.chip.ChipGroup>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- Rarity -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/rarity_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/rarity"
                        android:textAppearance="?attr/textAppearanceLabelSmall" />

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/rarity"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.chip.ChipGroup>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- Secondhand cost -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/secondhand_cost_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/secondhand_cost"
                        android:textAppearance="?attr/textAppearanceLabelSmall" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/secondhand_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- Price range -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/price_range_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/price_range"
                        android:textAppearance="?attr/textAppearanceLabelSmall" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/price_range"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

                <!-- Link -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/link"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    app:icon="@drawable/travel_explore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>